[gd_scene load_steps=3 format=2]

[ext_resource path="res://Card.gd" type="Script" id=1]
[ext_resource path="res://PlayingTable.gd" type="Script" id=2]

[node name="PlayingTable" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Card" type="TextureButton" parent="."]
margin_left = 52.4097
margin_top = 313.95
margin_right = 92.4097
margin_bottom = 353.95
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="GameStateHTTPRequest" type="HTTPRequest" parent="."]

[node name="PlayerCards" type="GridContainer" parent="."]
margin_left = 52.5084
margin_top = 405.0
margin_right = 1002.51
margin_bottom = 506.0
grow_horizontal = 2
rect_pivot_offset = Vector2( -269.735, -241.568 )
size_flags_horizontal = 7
columns = 13

[node name="Button" type="Button" parent="."]
anchor_right = 0.023
anchor_bottom = 0.045
margin_left = 424.285
margin_top = 527.989
margin_right = 497.733
margin_bottom = 536.989
text = "Play Move"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayHandHTTPRequest" type="HTTPRequest" parent="."]

[node name="YourMoveNotifier" type="Label" parent="."]
margin_left = 138.848
margin_top = 530.188
margin_right = 305.848
margin_bottom = 584.188
text = "It's your move!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head Label" type="Label" parent="."]
margin_left = 357.0
margin_top = 22.0
margin_right = 666.0
margin_bottom = 94.0
text = "Socialism with Chinese Characteristics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCards2" type="GridContainer" parent="."]
margin_left = 27.2791
margin_top = 173.876
margin_right = 317.279
margin_bottom = 280.876
grow_horizontal = 2
columns = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCards3" type="GridContainer" parent="."]
margin_left = 334.105
margin_top = 51.2477
margin_right = 624.105
margin_bottom = 158.248
grow_horizontal = 2
columns = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCards4" type="GridContainer" parent="."]
margin_left = 721.835
margin_top = 187.106
margin_right = 1011.84
margin_bottom = 294.106
grow_horizontal = 2
columns = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCards1" type="GridContainer" parent="."]
margin_left = 340.72
margin_top = 301.593
margin_right = 630.72
margin_bottom = 408.593
grow_horizontal = 2
columns = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="RichTextLabel" parent="."]
margin_left = 64.4416
margin_top = 297.12
margin_right = 194.442
margin_bottom = 334.12
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="RichTextLabel" parent="."]
margin_left = 179.946
margin_top = 77.8135
margin_right = 309.946
margin_bottom = 114.813
bbcode_enabled = true

[node name="Label4" type="RichTextLabel" parent="."]
margin_left = 815.987
margin_top = 302.717
margin_right = 945.987
margin_bottom = 339.717
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="RichTextLabel" parent="."]
margin_left = 123.975
margin_top = 553.572
margin_right = 253.975
margin_bottom = 590.572
bbcode_enabled = true

[node name="GameOverMessage" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = -20.0
margin_right = 75.5
margin_bottom = 20.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="request_completed" from="GameStateHTTPRequest" to="." method="_on_GameStateHTTPRequest_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="PlayHandHTTPRequest" to="." method="_on_PlayHandHTTPRequest_request_completed"]
[connection signal="confirmed" from="GameOverMessage" to="." method="_on_GameOverMessage_confirmed"]
